--- a/WebsiteBanXeDap/nbproject/private/private.properties
+++ b/WebsiteBanXeDap/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\MSI GF\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+deploy.ant.properties.file=C:\\Users\\admins\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\admins\\OneDrive\\Desktop\\SWT301_Lab2\\Fixed project\\SWT_Lab2_SE1737NJ\\WebsiteBanXeDap\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\admins\\OneDrive\\Desktop\\SWT301_Lab2\\Fixed project\\SWT_Lab2_SE1737NJ\\WebsiteBanXeDap\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.sqljdbc42.jar=C:\\Users\\admins\\OneDrive\\Desktop\\SWT301_Lab2\\Fixed project\\SWT_Lab2_SE1737NJ\\WebsiteBanXeDap\\lib\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
-user.properties.file=C:\\Users\\MSI GF\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\admins\\AppData\\Roaming\\NetBeans\\13\\build.properties
